<resources>
    <string name="app_name">CookingRecipeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_recipe_list_item">Recipe preview</string>
    <string name="description_rating_star">Rating star</string>
    <string name="description_timer">Recipe timer icon</string>
    <string name="description_filter_fab">Filter icon</string>
    <string name="search_recipes_hint">Busca tu receta perfecta</string>
    <string name="home_message">Encuentra las mejores\nrecetas de cocina</string>
    <string name="description_search_bar_icon">Search icon</string>
    <string name="description_arrow_back">Back arrow icon</string>
    <string name="ingredients">Ingredientes</string>
    <string name="description">Descripción</string>
    <string name="go_to_map_origin_label">Ver origen</string>
    <string name="know_more">Conocer más</string>
    <string name="know_more_title">Conocer más</string>
    <string name="know_more_description">Te llevaremos a la página web de Wikipedia</string>
    <string name="continue_label">Continuar</string>
    <string name="cancel_label">Cancelar</string>
    <string name="something_goes_wrong">Lo sentimos algo salió mal</string>
    <string name="retry">Reintentar</string>
    <string name="description_error_image">Error image</string>
    <string name="oops">Oops!</string>
    <string name="whoops">Whoops!</string>
    <string name="no_connection">Sin conexión</string>
    <string name="no_connection_message">No se puede conectar a la red,\npor favor revisa tu conexión\ne inténtalo más tarde</string>
    <string name="api_issue_message">Estamos teniendo problemas. Reinténtalo más tarde</string>
    <string name="unknown_error_message">Algo salió mal. Por favor reinténtalo más tarde</string>
</resources>