<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fillViewport="true"
    tools:context=".ui.detail.RecipeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_arrow_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/description_arrow_back"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_recipe_photo"
            style="?materialCardViewElevatedStyle"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_recipe_title"
            tools:ignore="TextSizeCheck">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_recipe_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_recipe_list_item"
                    android:foreground="@drawable/overlay_recipe_detail"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/example_image"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_rating_stars"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:contentDescription="@string/description_rating_star"
                            app:srcCompat="@drawable/ic_star_12" />

                        <TextView
                            android:id="@+id/text_rating_stars"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:includeFontPadding="false"
                            android:textAppearance="@style/label"
                            android:textSize="12sp"
                            tools:text="4,0" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/text_cooking_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/poppins"
                        android:includeFontPadding="false"
                        android:textColor="#D9D9D9"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="20 min" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:contentDescription="@string/description_timer"
                        app:layout_constraintBottom_toBottomOf="@+id/text_cooking_time"
                        app:layout_constraintEnd_toStartOf="@+id/text_cooking_time"
                        app:layout_constraintTop_toTopOf="@+id/text_cooking_time"
                        app:srcCompat="@drawable/ic_timer" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_recipe_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_arrow_back"
            tools:text="Arroz chaufa" />

        <TextView
            android:id="@+id/subtitle_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/ingredients"
            android:textColor="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_recipe_photo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:paddingVertical="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_ingredients"
            tools:listitem="@layout/item_ingredient" />

        <TextView
            android:id="@+id/subtitle_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/description"
            android:textColor="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_ingredients" />


        <TextView
            android:id="@+id/text_recipe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:alpha="0.8"
            android:fontFamily="@font/poppins"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_description"
            tools:maxLines="4"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_map_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/go_to_map_origin_label"
            android:textSize="17sp"
            app:icon="@drawable/ic_map_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_recipe_description"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>