<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_recipe_item"
    style="?materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    tools:ignore="TextSizeCheck">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_recipe_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_recipe_list_item"
            android:foreground="@drawable/overlay_item_recipe_list"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/example_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rating_stars"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/description_rating_star"
                    app:srcCompat="@drawable/ic_star_12" />

                <TextView
                    android:id="@+id/text_rating_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:includeFontPadding="false"
                    android:textAppearance="@style/label"
                    android:textSize="12sp"
                    tools:text="4,0" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/text_recipe_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Arroz chaufa con lomo saltado" />

            <TextView
                android:id="@+id/text_cooking_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins"
                android:includeFontPadding="false"
                android:textColor="#D9D9D9"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                tools:text="20 min" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/description_timer"
                app:layout_constraintBottom_toBottomOf="@+id/text_cooking_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_cooking_time"
                app:srcCompat="@drawable/ic_timer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</com.google.android.material.card.MaterialCardView>